blue-green-demo-config.yaml
apiVersion: serving.knative.dev/v1alpha1
kind: Route
metadata:
  name: route-blue-green
  namespace: default
spec:
  traffic:
  - configurationName: config-demo-blue
    name: v1
    percent: 50
  - configurationName: config-demo-green
    name: v2
    percent: 50
