config-network-event-external.yaml
# Create a ServiceEntry for IBM Cloud Functions
apiVersion: networking.istio.io/v1alpha3
kind: ServiceEntry
metadata:
  name: ibm-cloud-functions-ext
  namespace: knative-eventing
spec:
  hosts:
  - "*.functions.cloud.ibm.com"
  ports:
  - number: 443
    name: https
    protocol: HTTPS
  location: MESH_EXTERNAL
---
# Create Virtual Service fort TLS
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: ibm-cloud-functions-virt-service
spec:
  hosts:
  - "*.functions.cloud.ibm.com"
  tls:
  - match:
    - port: 443
      sni_hosts:
      -  "*.functions.cloud.ibm.com"
    route:
    - destination:
        host:  "*.functions.cloud.ibm.com"
        port:
          number: 443
      weight: 100
